--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,5 +1,5 @@
 <h3 class="text-center font-weight-bold pt-5">会員一覧</h3>
-<div class="container d-flex align-items-center justify-content-center pt-5" style="height:auto; width:auto;">
+<div class="container d-flex align-items-center justify-content-center pt-5" style="height:auto; width:800px;">
  <table class="table">
    <tr>
     <th>会員ID</th>
