--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -8,7 +8,9 @@
 　<h5>商品説明</h5>
 　<%= f.text_area :introduction %>
 　<h5>税抜き価格</h5>
-　<%= f.number_field :price %>円</br></br>
-　<%= f.submit '新規登録',class: "btn btn-primary" %>
+　<%= f.number_field :price %>円<br>
+　<div class="btn pt-3">
+　 <%= f.submit '新規登録',class: "btn btn-primary" %>
+　</div>
 　<% end %>
 </div>
