--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -8,7 +8,14 @@
    <tr align="center"><td>住所</td> 　          <td><%= @customer.address %></td></tr>
    <tr align="center"><td>電話番号</td>         <td><%= @customer.telephone_number %></td></tr>
    <tr align="center"><td>メールアドレス</td>  <td><%= @customer.email %></td></tr>
-   <tr align="center"><td>会員ステータス</td> <td><%= @customer.is_deleted %></td></tr>
+   <tr align="center"><td>会員ステータス</td>
+   <td>
+    <% if @customer.is_deleted == true %>
+   退会済
+   <% else %>
+   有効
+   <% end %>
+   </td></tr>
  </table>
 </div>
 <div class="btn pt-5">
