--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,10 +1,12 @@
-<h1>ジャンル編集</h1>
-<%= form_with model: @genre,url: "/admin/genres/#{@genre.id}",local:true do |f| %>
-<div class="form-group">
- <label for="genre-name">ジャンル名</label>
-  <br><%= f.text_field :name %>
-</div>
-<div class="form-group">
- <%= f.submit '変更を保存',class: 'btn btn-success' %>
- <% end %>
+<h3 class="text-center font-weight-bold pt-5">ジャンル編集</h3>
+<div class="container pt-5" style="height:auto; width:700px;">
+  <%= form_with model: @genre,url: "/admin/genres/#{@genre.id}",local:true do |f| %>
+  <div class="form-group">
+   <label for="genre-name">ジャンル名</label><br>
+   <%= f.text_field :name %>
+  </div>
+  <div class="form-group">
+   <%= f.submit '変更を保存',class: 'btn btn-success' %>
+   <% end %>
+  </div>
 </div>
