--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,4 +1,4 @@
-  <h3 class="text-center font-weight-bold"><ins>注文履歴一覧</ins></h3>
+  <h3 class="text-center font-weight-bold pt-5"><ins>注文履歴一覧</ins></h3>
    <div class="container d-flex align-items-center pt-5" style="width:600px;">
     <table class="table table-bordered">
      <thead>
@@ -14,9 +14,9 @@
       <td><%= order.customer.full_name %></td>
       <td>
        <% total_amount = 0 %>
-       <% order.order_details.each do |order_detail| %>
+        <% order.order_details.each do |order_detail| %>
         <% total_amount += order_detail.amount %>
-       <% end %>
+        <% end %>
        <%= total_amount %>
       </td>
       <td><%= link_to "表示する",admin_order_path(order.id),class:"btn btn-sm btn-primary" %></td>
