--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
        <%= link_to "会員一覧",admin_customers_path,class: 'nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "注文履歴一覧",root_path,class: 'nav-link text-light' %>
+       <%= link_to "注文履歴一覧",admin_path,class: 'nav-link text-light' %>
       </li>
       <li>
        <%= link_to "ジャンル一覧",admin_genres_path,class: 'nav-link text-light' %>
@@ -72,7 +72,5 @@
    </nav>
   </header>
   <%= yield %>
-  <footer class="footer">
-  </footer>
  </body>
 </html>
