--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -10,18 +10,18 @@
 
    <div class="form-group">
     <%= f.label :住所 %>
-    <%= f.text_area :address,autofocus: true,  style: "width:30%",placeholder:"東京都渋谷区代々木神園町0-0", class: 'form-control' %>
+    <%= f.text_area :address,autofocus: true,  style: "width:30%",placeholder:"例:東京都渋谷区代々木神園町0-0", class: 'form-control' %>
    </div>
 
    <div class="form-group">
     <%= f.label :宛名 %>
-    <%= f.text_area :name,autofocus: true,  style: "width:20%",placeholder:"昭和花子", class: 'form-control' %>
+    <%= f.text_area :name,autofocus: true,  style: "width:20%",placeholder:"例:昭和花子", class: 'form-control' %>
    </div>
 
    <div class="actions">
     <%= f.submit "新規登録",class: "btn btn-primary" %>
    </div>
- <% end %><br/>
+ <% end %><br>
 
  <table class="table table-bordered">
   <thead>
