--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-item pt-5" style="height:auto;">
  <h2 class="text-center font-weight-bold"><ins>ショッピングカート</ins></h2>
- <div class="cart-item-content" style="width:60%"></br>
+ <div class="cart-item-content" style="width:60%"><br>
 　<table class="table">
    <thead>
     <tr>
@@ -19,8 +19,8 @@
      <td><%= cart_item.item.taxin_price.to_s( :delimited) %>円</td> <!--税込の単価表示-->
          <%= form_with model: cart_item,local:true do |f| %> <!--セレクトボックスで数量を表示する-->
      <td><%= f.select :amount, *[1..10] %></td>
-　   <td><%= f.submit '変更',class: "btn btn-sm btn-primary" %></td>
-         <% end %>
+　   <td><%= f.submit '変更',class: "btn btn-sm btn-primary" %>
+         <% end %></td>
      <td><%= cart_item.subtotal.to_s( :delimited) %>円</td> <!--小計の表示-->
      <td><%= link_to "削除",cart_item_path(cart_item.id),method: :delete,class: "btn btn-sm btn-danger" %></td>
     </tr>
@@ -32,10 +32,16 @@
      <td><h5><ins>合計金額<%= @total.to_s(:delimited) %>円</ins></h5></td>
    </tbody>
   </table>
-  <%= link_to "買い物を続ける",items_path,class: "btn btn-sm btn-primary" %></br></br>
-  <%= link_to "カートを空にする",cart_items_destroy_all_path,method: :delete,"data-confirm" => "本当にカートを空にしますか？",class: "btn btn-sm btn-danger" %></br></br>
-  <div class="text-center">
-  <%= link_to "情報入力に進む",new_order_path,class: "btn btn-sm btn-success" %></br></br>
+  <div class="btn pt-2">
+   <%= link_to "買い物を続ける",root_path,class: "btn btn-sm btn-primary" %>
+  </div>
+  <div class="btn py-2">
+   <%= link_to "カートを空にする",cart_items_destroy_all_path,method: :delete,"data-confirm" => "本当にカートを空にしますか？",class: "btn btn-sm btn-danger" %>
+  </div>
+  <div class="text-center pt-5">
+   <% if @cart_items.present? %>
+  <%= link_to "情報入力に進む",new_order_path,class: "btn btn-sm btn-success" %>
+  <% end %>
   </div>
  </div>
 </div>
