--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-sign-in-content d-flex flex-column align-items-center justify-content-center" style="height:700px;">
  <h2><ins>マイページ</ins></h2>
-  </br>
+  <br>
  <h5>登録情報<%= link_to '編集する',customers_edit_page_path,class: "btn btn-primary btn-sm ml-3" %></h5>
  <div class="row d-flex flex-column align-items-center justify-content-center">
   <table class="table">
@@ -11,8 +11,8 @@
    <tr><th style="width: 50%">電話番号:</th>    <td><%= @customer.telephone_number %></td></tr>
    <tr><th style="width: 50%">メールアドレス:</th> <td><%= @customer.email %></td></tr>
   </table>
-  </br>
-  <h5>配送先<%= link_to '一覧を見る',addresses_path,class: "btn btn-primary btn-sm ml-4" %></h5></br>
+  <div class="btn pt-4">
+  <h5>配送先<%= link_to '一覧を見る',addresses_path,class: "btn btn-primary btn-sm ml-4" %></h5><br>
   <h5>注文履歴<%= link_to '一覧を見る',orders_path,class: "btn btn-primary btn-sm ml-2" %></h5>
  </div>
 </div>
