--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,10 +1,14 @@
 <div class="container-my-page d-flex flex-column align-items-center justify-content-center" style="height:auto;">
 <h4 class="mt-4">本当に退会しますか？</h4>
-</br>
-退会すると、会員情報や</br>
-これまでの購入履歴が閲覧できなくなります。</br>
-退会する場合は、「退会する」をクリックしてください。</br></br>
+<br>
+退会すると、会員情報や<br>
+これまでの購入履歴が閲覧できなくなります。<br>
+退会する場合は、「退会する」をクリックしてください。<br>
 
-<%= link_to '退会しない',customers_my_page_path(current_customer),class: "btn btn-primary" %></br>
-<%= link_to '退会する',customers_withdraw_path, method: :patch, data: { confirm: "本当に退会しますか？"},class: "btn btn-danger" %>
+ <div class="btn pt-3">
+  <%= link_to '退会しない',customers_my_page_path(current_customer),class: "btn btn-primary" %>
+ </div>
+ <div class="btn pt-3">
+  <%= link_to '退会する',customers_withdraw_path, method: :patch, data: { confirm: "本当に退会しますか？"},class: "btn btn-danger" %>
+ </div>
 </div>
