--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,9 +1,26 @@
   <div class="top-visual" >
    <div class="top-visual-content">
-    <h2>ようこそ、ながのCAKEへ！</br></br>
+    <h2>ようこそ、ながのCAKEへ！<br><br>
          このサイトは、ケーキ販売のECサイトです。<br>
          会員でない方も商品の閲覧はできますが、<br>
          購入には会員登録が必要になります。
     </h2>
    </div>
   </div>
+  <h4 class="text-center font-weight-bold pt-4 text-primary">新着商品</h4>
+  <div class="container">
+   <div class="row mb-2">
+    <% @items.first(4).each do |item| %>
+    <div class="rounded border border-secondary" style="width:250px;height:300px;margin:10px;" >
+     <div class="col d-flex">
+      <%= link_to attachment_image_tag(item, :image, format: 'jpg', size: '200x200', class: 'rounded'),item_path(item.id) %>
+     </div>
+     <div class="col-auto">
+      <ins><%= link_to item.name,item_path(item.id) ,class: "align-self-center" %></ins><br>
+           <%= item.price.to_s( :delimited) %>円(税抜)
+     </div>
+    </div>
+   <% end %>
+   <%= link_to "全ての商品を見る＞",items_path,class: "btn btn-success" %>
+  </div>
+ </div>
